#VERSION 0.8.3#

 - added constants INDENTATION_SPACE and LINE_BREAK to Peak_Codegen

 - added classes Peak_Codegen_Class, Peak_codegen_Class_Constant, Peak_codegen_Class_Docblock, Peak_codegen_Class_Element, 
   Peak_codegen_Class_Method, Peak_codegen_Class_Param, Peak_codegen_Class_Property

 - fixed Peak_Application so that it is no longer a singleton and removing $_instance and getInstance()

 - renamed property $allow_internal_controller to plural in Peak_Controller_Front and fixed method _registryConfig() to force
   boolean conversion for this property. 

 - deleted deprecated class Peak_Utils

 - fixed methods __construct() and __call() of Peak_Core to use getEnv() instead of deprecated constant DEV_MODE

 - fixed bug in Peak_Helpers::__get() by changing include for include_once

 - moved method _arrayMergeRecursive() from Peak_COnfig_Ini to Peak_Config, rename to arrayMergeRecursive() and changed
   visibility to public. fixed Peak_Core::initConfig() accordingly.

 - fixed Peak_View::iniVar() to not use '#' in ini file (# deprecated in 5.3) and to support loading a 
   ini file from a custom path. Variables used inside key value use syntax like $[myvar]. 

 - added method _registryConfig() in Peak_Controller_Front. Config use keyname 'front'. Modified method Peak_Application::run(),
   Peak_Controller_Front::dispatch() and Peak_Application_Modules::run() accordingly.

 - added property $allow_internal_controller to Peak_Controller_Front and deprecated 
   the use of constant ENABLE_PEAK_CONTROLLERS

 - added method _registryConfig() in Peak_View. We can now call methods for Peak_View inside an application 
   configuration file like set(), setRenderEngine(), rendering engine methods, etc... Config use keyname 'view'
   ex: view.set.myvar = "data", view.setRenderEngine = "Layouts", etc...

 - fixed Peak_Config_Ini::loadFile() to throw a exception if ini file contains syntax error(s) (php 5.2.7+)

 - rewrited appcreate.php to support new important changes
 